--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -22,7 +22,7 @@
     .lead__title{
         font-size: 40px;
         line-height: 44px;
-        width: 330px;
+       max-width: 288px;
         height: 96px;
         margin: 0 auto; 
         margin-top: 48px;     
