--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -31,7 +31,7 @@
 .place__title{
     font-size: 32px;
     line-height: 35px;
-    width: 343px;
+    max-width: 343px;
     height: 40px;
     margin-left: 15px;
     margin-top: 0;
