--- a/blocks/video/__text/video__text.css
+++ b/blocks/video/__text/video__text.css
@@ -1,10 +1,15 @@
 .video__text{
     position: absolute;
-    width: 100%;
-    height: 100%;
+
     z-index: 2;
 }
   
 .video__text:hover + .video__picture img{
     opacity: 0.7;
+}
+
+@media (max-width: 366px){
+    .video__text{
+      max-width: 288px;
+    }
 }
