--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,10 +3,12 @@
     font-size: 12px;
     line-height: 20px;
     letter-spacing: 0.2em;
-    margin-top: 0;
-    margin-bottom: 16px;
     height: 12px;
     color: #AAAAAA;
+    max-width: 484px;
+    padding-top: 0;
+    margin-bottom: 10px;
+    margin-top: 0;
 }
 
 @media (max-width: 766px){
