--- a/blocks/content-title/content-title.css
+++ b/blocks/content-title/content-title.css
@@ -13,11 +13,11 @@
 @media (max-width: 1023px){
 
     .content-title{
-        width: 660px;
+        max-width: 600px;
         height: 103px;
         font-size: 42px;
         line-height: 46px;
-        margin: 0;
+        margin-top: 0;
     }
 }
 @media (max-width: 766px){
