--- a/blocks/cover/__image/cover__image.css
+++ b/blocks/cover/__image/cover__image.css
@@ -8,33 +8,35 @@
 
 @media (max-width: 1235px) {
 .cover__image{
-    max-width: 1024px;
     overflow: hidden;
     justify-content: center;
     align-items: center;
     margin-top: 100px;
+    margin: 0 auto;
+    width: 100%;
 }
 }
 @media (max-width: 1023px){
 .cover__image{
     width: 100%;
     height: 500px;
-    overflow: hidden;
-    
+
 }
 }
 
 @media (max-width: 766px){
 .cover__image{
     width: 100%;
-    height: 232px;
+    height: 272px;
 
 }
 }
 
 @media (max-width: 366px){
 .cover__image{
-    width: 100%;
     margin-top: 110px;
+    height: 216px;
+    width: 100%;
+
 }
 }
