--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -14,25 +14,32 @@
 
 @media (max-width: 1235px) {
     .cover__subtitle{
-        margin-top: 100px;
+        margin-top: 60px;
     }
 }
 @media (max-width: 1023px){
 .cover__subtitle{
     width: 382px;
-    height: 80px;
     grid-column: 2/3;
     grid-row: 3/4;
+    margin-top: 30px;
 }
 }
 
 @media (max-width: 766px){
 .cover__subtitle{
     width: 270px;
-    height: 57px;
     font-size: 14px;
     line-height: 17px;
-    margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 0;
 }
 }
+
+@media (max-width: 366px){
+    .cover__subtitle{
+        margin-top: 30px;
+        
+    }
+    }
+    
