--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,7 +3,7 @@
     font-size: 72px;
     line-height: 78px;
     text-align: center; 
-    z-index: 2;
+    z-index: 5;
     color: #FFFDFD;
     grid-column: 1/4;
     grid-row: 2/4;
@@ -13,24 +13,33 @@
     .cover__title{
         flex-wrap: wrap;
         max-width: 550px;
-        height: 80px;
         margin: 0 auto;
-        padding-top: 70px;
+        padding-top: 0px;
     }
 }
 @media (max-width: 1023px){
 .cover__title{
     width: 550px;
-    height: 170px;
     justify-content: center;
+    padding-top: 0;
+    margin-top: 0;
+
 }
 }
 @media (max-width: 766px){
 .cover__title{
     font-size: 32px;
     line-height: 35px;
-    margin: 0 auto;
-    width: 250px;
-    height: 80px;
+    max-width: 250px;
+    margin-top: 0;
+    padding-top: 0;
 }
 }
+
+@media (max-width: 366px){
+    .cover__title{
+        margin-top: 50px;
+        
+    }
+    }
+    
