--- a/blocks/footer/__copywright/footer__copywright.css
+++ b/blocks/footer/__copywright/footer__copywright.css
@@ -21,6 +21,7 @@
   .footer__copywright{
     margin-left: 0;
     margin-top: 48px;
-    padding-bottom: 24px;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 }
