--- a/blocks/header/__langs/__lang/header__lang.css
+++ b/blocks/header/__langs/__lang/header__lang.css
@@ -1,8 +1,5 @@
 
-
-
-
-.header__menu_item{
+.header__langs_lang{
     font-family: 'Inter', 'Arial', sans-serif;
     font-size: 24px;
     line-height: 23px;
@@ -11,17 +8,16 @@
     color: #FFFFFF;
 }
 
-.header__menu_item:hover{
-    text-decoration: underline;
+.header__langs_lang:hover{
     opacity: 0.7;
     transition: 0.3s;
 }
-.header__menu_item:last-of-type{
+.header__langs_lang:last-of-type{
     margin-right: 0;
 }
 
 @media (max-width: 366px){
-    .header__menu_item{
+    .header__langs_lang{
         margin-top: 19px;
     }
 }
