--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,22 +3,28 @@
     font-size: 14px;
     line-height: 24px;
     margin-top: 48px;
+    max-width: 683px;
 }
 
 
 @media (max-width: 1235px) {
    .intro__text{
-    width: 692px;
+    max-width: 692px;
  }
+}
+
+@media (max-width: 1023px){
+    .intro__text{
+    max-width: 720px;  
+    }
 }
 
 @media (max-width: 766px){
 .intro__text{
     font-size: 16px;
     line-height: 27px;
-    width: 330px;
-    height: 461px;  
-    padding-bottom: 32px;
+    max-width: 720px;
+    margin-top: 0;
  }
 }
 @media (max-width: 366px){
