--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,20 +1,22 @@
 @media (max-width: 1235px) {
     .photo-grid__item{
-        width: 300px;
+        max-width: 352px;
+        height: 200px;
     }
 }
 
-
 @media (max-width: 1023px){
     .photo-grid__item{
-        width: 352px;
+        width: 100%;
         height: 234px;
+        margin: auto;
     }
 }
 
 @media (max-width: 766px){
     .photo-grid__item{
     width: 100%;
-    height: 232px;
+    max-height: 232px;
+
 }
 }
