--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,24 +1,37 @@
 .place__image{
     max-width: 460px;
+    margin:  auto;
     margin-top: 60px;
+    padding-top: 0;
 }
 
 @media (max-width: 1235px) {
     .place__image{
-    width: 440px;
+    max-width: 440px;
+    padding-top: 60px;
+    margin: auto;
 }
 }
 @media (max-width: 1023px){
     .place__image{
-        width: 340px;
         margin-top: 40px;
+        margin: auto;
+        margin: 0 auto;
+
+        width: 94%;
+
     }
 }
 
 @media (max-width: 766px){
 .place__image{
-    width: 100%;
     margin-top: 32px;
+    width: 100%;
+    
 }
 }
-
+@media (max-width: 366px) {
+.place__image{
+    max-width: 100%; 
+}
+}
