--- a/blocks/place/__main/place__main.css
+++ b/blocks/place/__main/place__main.css
@@ -1,8 +1,10 @@
 
+
 .place__main{
-    margin-top: 0;
-    margin-right: 40px;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
+
 
 @media (max-width: 1235px) {
 
@@ -13,19 +15,18 @@
 
 
 @media (max-width: 1023px){
-    .intro__width{
-        width: 93%;
-        height: 384px;
-        padding-bottom: 97px;
-        margin: auto;
-    }
+
     .place__main{
         margin-right: 28px;
     }
 }
+
 @media (max-width: 766px){
-.place__main{
-    width: 100%;
-}
-}
+    .place__main{
+        grid-column: 1/4;
+        grid-row: 1/2;
+        margin: 0 auto;
+    
+    }
+    }
 
