--- a/blocks/place/__title/_margin/place__title_margin.css
+++ b/blocks/place/__title/_margin/place__title_margin.css
@@ -1,5 +1,5 @@
 
-.place__title_margins{
+.place__title_margin{
     font-family: 'Inter Bolder', 'Arial', sans-serif;
     font-size: 72px;
     line-height: 65px;
@@ -9,7 +9,7 @@
 }
 
 @media (max-width: 1023px){
-    .place__title_margins{
+    .place__title_margin{
         font-size: 42px;
         line-height: 46px;
         height: 56px;
@@ -19,12 +19,12 @@
      }
 }
 @media (max-width: 766px){
-.place__title_margins{
+.place__title_margin{
     font-size: 32px;
     line-height: 35px;
     max-width: 343px;
     height: 40px;
-    margin-top: 0px;
+    margin-top: 30px;
     padding-top: 48px;
     padding-left: 16px;
 
@@ -32,12 +32,12 @@
 }
 
 @media (max-width: 366px){
-    .place__title_margins{
+    .place__title_margin{
         font-size: 32px;
         line-height: 35px;
-        max-width: 288px;
+        max-width: 270px;
         height: 40px;
-        margin-top: 0;
+        margin-top: 35px;
         padding-top: 48px;
     }
     }
