--- a/blocks/place/__website/_margin/place__website_margin.css
+++ b/blocks/place/__website/_margin/place__website_margin.css
@@ -1,20 +1,25 @@
 
 .place__website_margin{
-    margin-top: 160px;
+    margin-top: 150px;
     margin-bottom: 0;
+
+    grid-column: 2/2;
+    grid-row: 1/2;
 }
 
 @media (max-width: 1023px){
 
     .place__website_margin{
-        margin-top: 72px;        
+        margin-top: 0px; 
     }
 }
 @media (max-width: 766px){
 .place__website_margin{
     margin-top: 20px;
-    margin-left: 16px;
-    margin-right: 16px;
-    
+    padding-top: 25px;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin: auto;
+   
 }
 }
