--- a/blocks/place/__website/_margins/place__website_margins.css
+++ b/blocks/place/__website/_margins/place__website_margins.css
@@ -1,20 +1,23 @@
 .place__website_margins{
-    margin-top: 95px;
+    margin-top: 85px;
     margin-bottom: 0;
+    grid-column: 2/2;
+    grid-row: 1/2;
 }
 
 
 @media (max-width: 1023px){
 
     .place__website_margins{
-        margin-top: 72px;        
+        margin-top: 0px;        
     }
 }
 @media (max-width: 766px){
 .place__website_margins{
     margin-top: 20px;
-    margin-left: 16px;
-    margin-right: 16px;
-    margin-bottom: 70px;   
+    padding-top: 25px;
+    grid-column: 2/3;
+    grid-row: 2/2;
+    margin: auto; 
 }
 }
