--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,9 +1,13 @@
 .place__website{
-    margin-top: 179px;
+    grid-column: 2/2;
+    grid-row: 1/2;
     margin-bottom: 0;
-    margin-left: 0;
-    max-width: 484px;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-top: 169px;
+    padding-top: 0;
 }
+
 
 @media (max-width: 1235px) {
     .place__website{
@@ -21,13 +25,15 @@
     .place__website{
         max-width: 352px;
         margin-top: 141px;
+
     }
 }
 @media (max-width: 766px){
 .place__website{
     margin-top: 20px;
-    margin-left: 16px;
-    margin-right: 16px;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin: auto;
 }
 }
 @media (max-width: 366px){
@@ -35,3 +41,4 @@
     max-width: 288px;
 }
 }
+
