--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,16 +1,16 @@
-.places{
-    margin: auto;
-}
+
 
 @media (max-width: 1023px){
 
     .places{
         padding-bottom: 172px;
+        max-width: 720px;
     }
 }
 @media (max-width: 766px){
 .places{
-    width: 100%;
+    max-width: 766px;;
+    margin: auto;
 }
 }
 
@@ -18,5 +18,6 @@
     .places{
         margin-bottom: 0;
         padding-bottom: 0;
+        max-width: 300px;
     }
     }
