--- a/blocks/video/__duration/video__duration.css
+++ b/blocks/video/__duration/video__duration.css
@@ -3,18 +3,22 @@
     font-size: 12px;
     line-height: 13px;
     letter-spacing: 0.3em;
-    margin-top: 94px;
+    grid-column: 1/4;
+    grid-row: 1/4;
+    z-index: 2;
+    margin-top: 165px;
     margin-left: 30px;
 }
 
 @media (max-width: 1235px) {
 
     .video__duration{
-        margin-top: 54px;
+        margin-top: 125px;
     }
 }
 @media (max-width: 1023px){
 .video__duration{
-    margin-top: 17px;
+    margin-top: 0;
+    padding-top: 82px;
 }
 }
