--- a/blocks/video/__icon/_play/video__icon_play.css
+++ b/blocks/video/__icon/_play/video__icon_play.css
@@ -1,7 +1,11 @@
 
 .video__icon_play{
-    margin-left: 30px;
+    grid-column: 1/4;
+    grid-row: 1/4;
+    z-index: 2;
     margin-top: 30px;
+    margin-left: 30px;
+
 }
 
 @media (max-width: 1023px){
