--- a/blocks/video/__illustration/video__illustration.css
+++ b/blocks/video/__illustration/video__illustration.css
@@ -2,31 +2,38 @@
 .video__illustration{
     max-width: 583px;
     max-height: 323px;
+    border-radius: 5px;
+    grid-column: 1/4;
+    grid-row: 1/4;
+    background: #000;
+
 }
 
 
 @media (max-width: 1235px) {
     .video__illustration{
-        width: 456px; 
-        height: 288px;             
+        max-width: 456px; 
+        height: 288px;    
     }
 }
 @media (max-width: 1023px){
 .video__illustration{
-    width: 352px;
-    height: 200px;           
+    max-width: 352px;
+    height: 200px; 
+    margin: 0 auto;          
 }
 }
 @media (max-width: 766px){
 .video__illustration{
-    width: 343px;
+    max-width: 343px;
     height: 200px;           
 }
 }
 @media (max-width: 366px){
     .video__illustration{
-        width: 288px;
-        height: 192px;           
+        max-width: 288px;
+        height: 192px;    
+        margin: 0 auto;       
     }
     }
     
