--- a/blocks/video/__subtitile/video__subtitle.css
+++ b/blocks/video/__subtitile/video__subtitle.css
@@ -3,8 +3,28 @@
     font-family: 'Inter', 'Arial', sans-serif;
     font-size: 14px;
     line-height: 15px;
-    margin-top: 18px;
+    grid-column: 1/4;
+    grid-row: 1/4;
+    margin-top: 280px;
     margin-left: 30px;
-    margin-bottom: 30px;
+    z-index: 2;
 }
 
+@media (max-width: 1235px){
+    .video__subtitle{
+        margin-top: 240px;
+    }
+}
+@media (max-width: 1023px){
+    .video__subtitle{
+        margin-top: 160px;
+    }
+}
+
+@media (max-width: 766px){ 
+    .video__subtitle{
+        margin-top: 160px;
+
+    }
+
+}
