--- a/blocks/video/__title/video__title.css
+++ b/blocks/video/__title/video__title.css
@@ -3,22 +3,31 @@
     font-size: 36px;
     line-height: 39px;
     width: 322px;
-    margin-top: 12px;
-    margin-left: 30px;
-    margin-bottom: 0;
+    grid-column: 1/4;
+    grid-row: 1/4;
+  z-index: 2;
+  margin-top: 189px;
+  margin-left: 30px;
 }
 
-@media (max-width: 1023px){
+@media (max-width: 1235px){
     .video__title{
-        font-size: 24px;
-        line-height: 26px;
-        margin-top: 8px;
-        margin-bottom: 12px;
+        margin-top: 149px;
     }
 }
 
 @media (max-width: 1023px){
     .video__title{
         max-width: 256px;
+        font-size: 24px;
+        line-height: 26px;
+        margin-top: 104px;
     }
 }
+
+@media (max-width: 766px){
+    .video__title{
+        margin-bottom: 0;
+    }
+}
+
