--- a/blocks/width/_big/width_big.css
+++ b/blocks/width/_big/width_big.css
@@ -12,7 +12,7 @@
 
 @media (max-width: 1023px){
     .width_big {
-        width: 720px;
+        max-width: 720px;
         height: 52px;
         margin: 0 auto;      
     }
@@ -20,14 +20,14 @@
 
 @media (max-width: 766px){
     .width_big {
-        width: 343px;
+        max-width: 343px;
         margin: 0 auto;   
     }
 }
 
 @media (max-width: 366px){
     .width_big {
-        width: 288px;
+        max-width: 288px;
         margin: 0 auto;   
     }
 }
