--- a/blocks/cover/__image/cover__image.css
+++ b/blocks/cover/__image/cover__image.css
@@ -4,6 +4,8 @@
     max-height: 594px;
     grid-column: 1/4;
     grid-row: 1/4;
+    background-color: #2A2C2F;
+    opacity: 0.9;
 }
 
 @media (max-width: 1235px) {
@@ -20,7 +22,6 @@
 .cover__image{
     width: 100%;
     height: 500px;
-
 }
 }
 
@@ -28,7 +29,6 @@
 .cover__image{
     width: 100%;
     height: 272px;
-
 }
 }
 
@@ -37,6 +37,5 @@
     margin-top: 110px;
     height: 216px;
     width: 100%;
-
 }
 }
