--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -25,8 +25,10 @@
 
 @media (max-width: 766px){
 .place__image{
-    margin-top: 32px;
+    padding-top: 32px;
     width: 100%;
+    padding-bottom: 0;
+    margin-bottom: 0;
     
 }
 }
