--- a/blocks/place/__title/_margins/place__title_margins.css
+++ b/blocks/place/__title/_margins/place__title_margins.css
@@ -24,9 +24,12 @@
     line-height: 35px;
     max-width: 343px;
     height: 40px;
-    margin-top: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
     padding-top: 48px;
     padding-left: 16px;
+
 
 }
 }
