--- a/blocks/video/__illustration/video__illustration.css
+++ b/blocks/video/__illustration/video__illustration.css
@@ -5,8 +5,8 @@
     border-radius: 5px;
     grid-column: 1/4;
     grid-row: 1/4;
-    background: #000;
-
+    background-color: #000000;
+    opacity: 0.7;
 }
 
 
