--- a/blocks/cover/__image/cover__image.css
+++ b/blocks/cover/__image/cover__image.css
@@ -4,8 +4,8 @@
     max-height: 594px;
     grid-column: 1/4;
     grid-row: 1/4;
-    background-color: #2A2C2F;
     opacity: 0.9;
+    background: #2A2C2F;
 }
 
 @media (max-width: 1235px) {
