--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,10 +8,12 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     padding-top: 102px;
+
 }
 
 .cover:hover .cover__image {
     opacity: 0.7;
+    background: #2A2C2F;
 
 }
 
