--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -34,8 +34,8 @@
     line-height: 35px;
     max-width: 288px;
     height: 40px;
-    margin-top: 0;
-    padding-top: 64px;
+    margin-top: 64px;
+    padding-top: 0px;
     margin-left: 16px;
 
 }
