--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -2,13 +2,20 @@
     font-family: 'Inter', 'Arial', sans-serif;
     font-size: 18px;
     line-height: 30px;
-    text-decoration: underline;
     height: 25px;
     margin-top: 0;
     padding-top: 0;
     margin-bottom: 0;
     margin: 0 auto;
     max-width: 484px;
+    color: #FFFFFF;
+    text-decoration: none;
+    border-bottom: white 1px solid;
+}
+
+.place__url:hover{
+    opacity: 0.7;
+    transition: 0.3s
 }
 
 @media (max-width: 766px){
